--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="Header" id="header">  
-    </header>
-
-    <section id="section">
-        <div class="loading"></div>
-    </section>
+    <main class="Main">
+        <header class="Header" id="header">  
+        </header>
+    
+        <section id="content">
+            <div class="loading"></div>
+        </section>
+    </main>
+    
 </body>
 </html>
